--- a/templates/base.html
+++ b/templates/base.html
@@ -285,6 +285,12 @@
                                 </svg>
                                 БАРАА МАТЕРИАЛ
                             </a>
+                            <a href="{% url 'core:astbeginningbalance_list' %}" class="flex items-center py-1 px-3 text-xs font-semibold text-gray-700 rounded-md hover:bg-gray-100 hover:text-accounting-blue transition-colors duration-200">
+                                <svg class="h-4 w-4 mr-2" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 11H5m14 0a2 2 0 012 2v6a2 2 0 01-2 2H5a2 2 0 01-2-2v-6a2 2 0 012-2m14 0V9a2 2 0 00-2-2M5 11V9a2 2 0 012-2m0 0V5a2 2 0 012-2h6a2 2 0 012 2v2M7 7h10" />
+                                </svg>
+                                ҮНДСЭН ХӨРӨНГӨ
+                            </a>
                         </div>
                     </div>
 
@@ -372,15 +378,6 @@
                                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 6V4m0 2a2 2 0 100 4m0-4a2 2 0 110 4m-6 8a2 2 0 100-4m0 4a2 2 0 110-4m0 4v2m0-6V4m6 6v10m6-2a2 2 0 100-4m0 4a2 2 0 110-4m0 4v2m0-6V4" />
                                 </svg>
                                 ТАЙЛАН
-                            </a>
-                            {% endif %}
-                            
-                            {% if perms.core.view_refasset %}
-                            <a href="{% url 'core:asset_master_detail' %}" class="flex items-center px-3 py-1 text-xs font-semibold text-gray-700 rounded-md hover:bg-gray-100 hover:text-accounting-blue transition-colors duration-200 {% if 'assets' in request.path %}bg-gray-100 text-accounting-blue{% endif %}">
-                                <svg class="h-4 w-4 mr-2" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 21V5a2 2 0 00-2-2H7a2 2 0 00-2 2v16m14 0h2m-2 0h-5m-9 0H3m2 0h5M9 7h1m-1 4h1m4-4h1m-1 4h1m-5 10v-5a1 1 0 011-1h2a1 1 0 011 1v5m-4 0h4" />
-                                </svg>
-                                ҮНДСЭН ХӨРӨНГӨ
                             </a>
                             {% endif %}
                         </div>
